[package]
name = "cran_lua"
description = "cranelift ir for lua"
version = "0.1.0"
edition = "2021"
authors = ["BorisZhguchev <zhguchev@gmail.com>"]
license-file = "LICENSE"
homepage = "https://github.com/besok/cran_lua"
repository = "https://github.com/besok/cran_lua"
readme = "README.md"
keywords = ["lua", "cranelift", "backend", "language","compiler"]
categories = ["api-bindings", "compilers", "parsing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsit = {path = "../parseit"}
logos = "0.12.1"